--- a/nate-am-review/SectionIII/SectionIII.tex
+++ b/nate-am-review/SectionIII/SectionIII.tex
@@ -1,34 +1,34 @@
-%\section{Current ICME Tools are Well Equipped to Integrate with an ML Framework}
-%The interdisciplinary nature of AM has naturally led to a compartmentalization of scientific efforts. Since full-scale models of AM are not widespread, many scientists choose to focus on a single problem or process. 
-%
-%The following section details how machine learning approaches can tie-in to current efforts in AM. Since the study of AM is often focused around specific problems, this section is tailored to many common areas of study within AM. Different methods of analysis and characterization for different aspects of AM all tie-in well with different machine learning algorithms. Even more so, ML can be used to unite knowledge creation across AM's spatiotemporal scales.
-%
-%%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~
-%\subsection{Pre-Build Design}
-%\input{SectionIII/AlloyDesign.tex}
-%\input{SectionIII/DesignOfExperiments}
-%\input{SectionIII/TopologyOptimization}
+\section{Current ICME Tools are Well Equipped to Integrate with an ML Framework}
+The interdisciplinary nature of AM has naturally led to a compartmentalization of scientific efforts. Many scientists choose to focus on a single problem or process because of the richness of problems in AM, even those that are narrow in scope.  
+
+The following section details how machine learning approaches can tie-in to current efforts in AM. Since the study of AM is often focused around specific problems, this section is tailored to many common areas of study within AM. Different methods of analysis and characterization for different aspects of AM all tie-in well with different machine learning algorithms. Even more so, ML can be used to automate the generation of knowledge about AM process-structure and process-property relationships. 
 
 %~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~
-%\subsection{Process Design}
-%\input{SectionIII/ReducingComputationalComplexity}
-%\input{SectionIII/SurrogateModeling}
+\subsection{Pre-Build Design}
+\input{SectionIII/AlloyDesign.tex}
+\input{SectionIII/DesignOfExperiments}
+\input{SectionIII/TopologyOptimization}
 
+%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~
+\subsection{Process Design}
+Integrated computational materials engineering, as the name may imply, is primarily focused around \textit{computational} engineering of materials. The design space in AM makes choosing useful experiments difficult; the wide range of physics of AM makes full-scale, full-physics computational modeling a burden. This section focuses around applying machine learning algorithms to aid in computational studies and design of additive manufacturing. 
 
-%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~
-%\subsection{Process Monitoring and Characterization}
-%Monitoring of AM processes produces data equally numerous to, if not in excess of, the data produced by parametric analysis and modeling. The numerousness of time series data in AM warrants usage of quick, efficient, and robust signal processing methods for process monitoring, feedback, and control. These signal processing algorithms are closely related to machine learning and may serves as pre-processing techniques for using data in other machine learning applications like clustering and regression. 
-%
-%Machine learning algorithms can serve three problems in signal processing of AM:
-%\begin{itemize}
-%	\item real time analysis, event detection, and feedback mechanisms during manufacture;
-%	\item fast analysis and quantification of image data
-%	\item discovery of variables which can be used to study and describe the AM process (referred to as \textit{descriptor analysis})
-%\end{itemize}
+\input{SectionIII/ReducingComputationalComplexity}
+\input{SectionIII/SurrogateModeling}
 
+%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~
+\subsection{Process Monitoring and Characterization}
+Monitoring of AM processes produces data equally numerous to, if not in excess of, the data produced by parametric analysis and modeling. The numerousness of time series data in AM warrants usage of quick, efficient, and robust signal processing methods for process monitoring, feedback, and control. These signal processing algorithms are closely related to machine learning and may serves as pre-processing techniques for using data in other machine learning applications like clustering and regression. 
+
+Machine learning algorithms can serve three problems in signal processing of AM:
+\begin{itemize}
+	\item real time analysis, event detection, and feedback mechanisms during manufacture;
+	\item fast analysis and quantification of image data
+\end{itemize}
 
 \input{SectionIII/InSituMonitoring}
-%\input{SectionIII/Featurization}
+\input{SectionIII/Featurization}
+
  
 
 
