--- a/nate-am-review/SectionIII/AlloyDesign.tex
+++ b/nate-am-review/SectionIII/AlloyDesign.tex
@@ -1,22 +1,9 @@
 \subsubsection{Alloy Design}
-%\fig 
-%\includegraphics[width=1\linewidth]{Images/latdist}
-%\caption{Transferring materials information into algebraic structures can open up new searching and classification tools through the use of distance metrics and model fitting. Using these algebraic structures also lends itself to algorithmic computation, with no human intervention.}
-%\label{latdist}
-%\fiu
+Choice of alloy impacts the physics of AM from start to finish, starting with the optics of energy sources incident on feedstock and ending with the material properties of the final part. The reflected/absorbed intensity of lasers on powder beds is determined by the powder's composition \cite{Boley2016, Trapp2017}. The density of powders, both intra- and inter-granular density, plays a role in final part density \cite{Bi2013}. Conduction modes in the melt are partially determined by the thermal properties of the alloy \cite{Martin2017}. All of this is not to mention that different alloys exhibit different grain morphologies and therefore microstructures \cite{Collins2016}. 
 
+Problems in the additive process can also be linked to composition such as vaporization of constituent elements due to rapid thermal fluxes, impacting the stoichiometry of melt pools and, ultimately, quality \cite{Brice2018}. Even traditional engineering alloys sometimes need to be altered to improve compatibility with AM. Searching for new alloys specifically for AM may also be fruitful, as unique strengthening mechanisms can arise \cite{Brice2018, Wang2017}. Designing alloys for AM -- either altering currently used alloys or starting from scratch -- requires taking into consideration the compatibility of alloys' physical properties with AM. Alloy design for AM must take into consideration general alloy properties, like melting point, to feedstock-level properties, like vaporization temperature, to bulk alloy properties, like strength. All of this information has been documented and exists in databases that can be searched. Alloy designers from AM should take advantage of these databases to search for new alloys for use in additive. 
 
-%\fig
-%\includegraphics[width=1\linewidth]{Images/GA}
-%\caption{A good caption goes here.}
-%\label{GA}
-%\fiu
-
-Choice of alloy impacts the physics of AM from start to finish, starting with the optics of energy sources incident on feedstock and ending with the material properties of the final part. The reflected/absorbed intensity of lasers on powder beds is determined by the powder's composition \cite{Boley2016, Trapp2017}. The density of powders, both intra- and inter-granular density, plays a role in final part density \cite{Bi2013}. The thermal conductivity and modes of melt pools is partially determined by the thermal properties of the alloy \cite{Martin2017}. All of this is not to mention that different alloys exhibit different grain morphologies and therefore microstructures \cite{Collins2016}. 
-
-Problems in the additive process can also be linked to composition. Vaporization of constituent elements due to rapid thermal fluxes can impact the stoichiometry of melt pools, ultimately impacting quality \cite{Brice2018}. Traditional engineering alloys sometimes need to be altered to improve compatibility with AM. Searching for new alloys specifically for AM may also be fruitful, as unique strengthening mechanisms can arise \cite{Brice2018, Wang2017}. Designing alloys for AM -- either altering currently used alloys or starting from scratch -- requires taking into consideration the compatibility of alloys' physical properties with AM. Finding the right composition for AM can be interpreted as searching for a combination of elements which have all the right properties. Alloy design for AM must take into consideration general alloy properties, like melting point, to feedstock-level properties, like vaporization temperature, to bulk alloy properties, like strength. All of this information has been documented and exists in databases that can be searched. Alloy designers from AM need to take advantage of these databases and search for new alloys to use in AM systems. 
-
-Databases exist which contain all the information relating to some alloys and materials properties, ranging from the reflectivity of the alloy to the mechanical properties of alloys in bulk. The International Crystal Structure Database (ICSD) contains crystallographic information for millions of compositions. The Linus Pauling files contains a range of material information, from atomic properties like radius and electron valency to crystallographic level information \cite{Villars1998}. In modern day, large databases such as AFLOWLib \cite{Curtarolo2012a}, the Materials Project \cite{Jain2013} and more allow users to search through large databases of relevant alloy information to find one that matches a desired property. Searching through large databases of information to find optimal compositions for manufacturing is actually one of the earliest materials informatics problems ever addressed. Methods exist to perform these searches in a fast, automated way. These methods are referred to as database mining, a separate but related field to machine learning.
+Databases exist which contain alloy properties ranging from the reflectivity of the alloy to the mechanical properties of alloys in bulk. The International Crystal Structure Database (ICSD) contains crystallographic information for millions of compositions. The Linus Pauling files contains a range of material information, from atomic properties like radius and electron valency to crystallographic level information \cite{Villars1998}. In modern day, large databases such as AFLOWLib \cite{Curtarolo2012a}, the Materials Project \cite{Jain2013} and more allow users to search through large databases of relevant alloy information to find one that matches a desired property. Searching through large databases of information to find optimal compositions for manufacturing is actually one of the earliest materials informatics problems ever addressed. Methods exist to perform these searches in a fast, automated way. These methods are referred to as database mining, a data-driven materials design approach.
 
 A study by Martin et al. used database mining to find micronucleants for Al alloys in powder bed manufacturing \cite{Martin2017}. Part of the design process is identifying which alloy properties are important for the desired application. Heterogeneous nucleation of Al grains was the desired outcome of Martin's study. To induce such nucleation, Martin et al. searched for possible nucleants whose crystallographic lattice parameters closely matched that of Al. This way, the Al grains would have a low-energy-barrier nucleating site from which to grow heterogeneously. Martin's study employed a search algorithm to search through 4,500 different possible nucleants and identify those with the closest-matching parameters. Ultimately, Zr was found to be the best candidate.
 
@@ -24,7 +11,7 @@ The same process employed by Martin -- identify the properties which need to be 
 
 A limiting factor in database mining is that designers are limited to properties which have been measured or calculated. We do not have information about the vast space of \textit{possible} materials. Consider a set of alloying elements for Ti such as $\{\text{Al}, \text{V}, \text{Zr}, \text{Cr}\}$. Researchers may need to test the impact of alloying composition on the dendrite arm spacing of Ti alloys. Phase field models exist which simulate the growth of and measure dendrite arm spacing as a function of a continuum of composition. A particularly efficient combined phase field/cellular automata model was implemented by Tan et al. precisely to model dendrite arm spacing in laser manufactured alloys \cite{Tan2011}. 
 
-Modeling all possible combinations of $\{\text{Ti},\text{Al}, \text{V}, \text{Zr}, \text{Cr}\}$ is possible with coarse additions of alloying elements, but undesirable. Machine learning can aid in the process to find an optimal composition without modeling all possibilities. \textit{Genetic alogrithms} (GA) can search the space of possible alloys to find the optimal dendrite arm spacing. Genetic algorithms are loosely based in principles of evolutionary biology. The principle of genetic algorithms is to evaluate the \textit{fitness} of a population of candidate alloys against a \textit{fitness function}. The fitness function is a method of evaluating how well a candidate alloy meets a criteria -- in this case, dendrite arm spacing. 
+Modeling all possible combinations of $\{\text{Ti},\text{Al}, \text{V}, \text{Zr}, \text{Cr}\}$ is possible with coarse additions of alloying elements, but undesirable. Machine learning can aid in the process to find an optimal composition without modeling all possibilities. \textit{Genetic alogrithms} (GA) can search the space of possible alloys to find the optimal dendrite arm spacing. The principle of genetic algorithms is to evaluate the \textit{fitness} of a population of candidate alloys against a \textit{fitness function}. The fitness function is a method of evaluating how well a candidate alloy meets a criteria -- in this case, dendrite arm spacing. 
 
 As a thought experiment, consider using Tan's phase field/cellular automata model as a fitness function. It can be run for candidate compositions -- in this case, various amounts of $\{\text{Al}, \text{V}, \text{Zr}, \text{Cr}\}$ alloyed into Ti -- and used to evaluate the dendrite arm spacing. Once a fitness function has been identified, the next step in a genetic algorithm is to represent candidate alloys as a \textit{gene}. 
 
@@ -83,15 +70,10 @@ where in the child generation the amount of V was increased, while the amount of
 \end{table}
 where in the second generation V and Zr have been interchanged. 
 
-Selection, mutation, and crossover followed by model assessment and then further selection, mutation, and crossover continues until the design criteria is met. The intuition behind genetic algorithms is that eventually the selection process is narrowed down to alloys within a given region such that further mutation and crossover do not produce new genes. Eventually, all the `fittest` genes as determined by our model will converge to be approximately the same composition. 
+Selection, mutation, and crossover followed by model assessment and then further selection, mutation, and crossover continues until the design criteria is met. The intuition behind genetic algorithms is that eventually the selection process is narrowed down to alloys within a given region such that further mutation and crossover do not produce new genes. Eventually, all the `fittest` genes as determined by the model will converge to be approximately the same composition. 
 
 Genetic algorithms have been applied to alloy design for low and high temperature structural materials \cite{Ikeda1997, Kulkarni2004}, ultra high strength steels \cite{Xu2008}, specific electronic band gaps \cite{Dudiy2006}, minimum defect structures \cite{Anijdan2006}, exploring stable ternary or higher alloys alloys \cite{Hautier2010, Johannesson2002}, and more. For a review on the application of GA's to alloy design through the early 2000s see Ref. \cite{Chakraborti2004}.
 
 Other machine learning algorithms have also been applied for classification and optimization of alloy compositions. Anijdan used a combined genetic algorithm--neural network method to find Al-Si compositions of minimum porosity \cite{Anijdan2006}. Decisions trees have been implemented for a number of different alloy optimization, such as predicting ferromagnetism \cite{Landrum2003} and the stability of Heusler compounds \cite{Oliynyk2016}. 
  
-
-%\fig
-%\includegraphics[width=1\linewidth]{Images/enthalpy}
-%\caption{The enthalpy of formation is lowest in certain regions of the crystal lattice space, indicating that this trend follows trends in composition. Image taken from Ref. \cite{Johannesson2002}}
-%\label{enthalpy}
-%\fiu
+Of course, some compositions definitely \textit{won't} be compatible with the additive process. It would be useful to identify these alloys up front or as quickly as possible. Additive can also be improved through by machine learning algorithms which suggest the best materials or properties to test. A wide range of machine learning algorithms can be implemented to guide the entire experimental design process so that an optimized property is found as quickly as possible. 
