--- a/nate-am-review/SectionIII/Featurization.tex
+++ b/nate-am-review/SectionIII/Featurization.tex
@@ -1,12 +1,15 @@
 \subsubsection{Featurization of Qualitative Image Data}
-The intuition gained from human interpretation of images is not always encodable in a way that is compatible with models. A human might make a complicated interpretation of an image, such as ``the microstructure is mostly acicular, with some prior grains present, and a string of pores near the boundary." Surely, such a description conjures an image in the reader's head of what such a microstructure might look like. Encoding the same information into a finite element mesh of a microstructure isn't necessarily straightforward. It can be accomplished, for sure, but transforming an observed microstructure into quantitative information requires time-consuming methods. 
+The use of images in studying additive manufacturing is widespread, common throughout all aspects of the manufacturing process, and provides key information about material properties and processing. As with all aspects of AM, the sheer size of image data to be analyzed is profound due to the large design space of AM. The types of information taken from images includes grain characteristics, like size, orientation, and phase, and defect characteristics, like pore size or crack length. When characterizing all of these features for all possible processing conditions and alloys the size of the problem grows quickly.
 
-Image recognition algorithms are making strides at automating quantification of information from images, while also being able to produce qualitative descriptions of the images. Information such as the size of grains, orientation of grains, presence of cracks or pores, different phases, and more can be automatically identified through computer vision. DeCost et al. have made strides in turning metallographs into sets of quantitative information \cite{DeCost2015, DeCost2017, DeCost2017a}. 
+Computer vision algorithms have been tested for automation of materials science image classification and analysis. Using these algorithms can speed up the experimental characterization process of AM. Furthermore, computer vision techniques can quantify information which may have otherwise only been used qualitatively or measured by approximation. 
 
-In one particular example, DeCost et al. utilize scale invariance feature transform (SIFT) in order to identify possible features in images. The SIFT algorithm is a widely used algorithm for feature identification and is implemented in many open-source packages, such as OpenCV for C++ or Python \textbf{cite OpenCV}. SIFT relies on identifying regions of maximal and minimal intensity in successively blurred versions of an image. The gradient of pixels are regions of extremal intensity are then computed, resulting in a keypoint descriptor which encodes the size and orientation of a feature, as well as generates a descriptor for identifying that object. The idea behind SIFT is that similar features across images will have similar descriptors. This way, common features can be identified across images. 
+It is worthwhile to mention up front that these algorithms have been \textit{tested} on microstructure and, in some cases, additive-specific images. There are few algorithms that can process AM microstructure data `out-of-the-box.' Rather, these algorithms will need to be tailored in order to quantify AM images specifically. However, the algorithms discussed here have been proven on non-AM microstructure datasets, thus they should be extensible to AM datasets. The computer vision approaches which work for microstructure data are often the same approaches discussed in the previous section for in situ monitoring. 
 
-DeCost et al. performed SIFT on a database of microstructure images across several alloys \cite{DeCost2015}. The ``features'' that were identified across \textit{all} images were then clustered by $k$-means clustering to identify a dictionary of features. Human investigation can assign qualitative labels to clusters, such as ``$\alpha$ grain" or ``pore" or ``grain boundary." Now, new images can be analyzed with SIFT and their features can be compared to the dictionary of human-interpretable feature descriptors. 
+One AM-related application of image characterization is measuring particle size distributions in AM powder feedstock. DeCost and Holm used SIFT with a dictionary classifier, as in template matching, to measure the particle size distribution for a dataset of synthetic powder particles \cite{DeCost2017a}. Particle size distribution plays in several steps across the additive process including energy absorption and part metrology \cite{Zhou2009, Boley2015, Boley2016}. DeCost created datasets with six different particle size distributions. Image features were identified and classified using $k$-means clustering on the features found by SIFT. Then, a classification algorithm known as a support vector machine (SVM) was trained to classify image features into particle sizes. DeCost was able to achieve $89$\% overall classification accuracy in measuring particle size distribution this way. DeCost et al. later improved upon this powder classification method and were able to achieve higher classification accuracies for real powder images \cite{DeCost2017}.
 
-Not only does this process partially automate analysis of images it also automates translation of image-level information into quantitative information. Grain size can be measured by the number of pixels in an identified grain. Orientation of grains in the image can be determined from the values of the keypoint descriptor. The number of pores in an image can be counted as the number of features which match ``pore" in the dictionary. Of course, a human could perform all of this with a ruler and their eyes. However, a computer can perform the same process much faster and on many more images. 
+DeCost et al. have also made strides in identifying and quantifying information from metallographs \cite{DeCost2015, DeCost2017b, Ling2017a}. A good portion of quality control in materials science as a whole, not just AM, involves classifying materials based on metallographs or micrographs of microstructure. Work is being done across materials science to apply machine learning based computer vision to classifying and quantifying information in these microstructural images. Doing so will speed up the process of materials characterization and qualification, while also providing methods of quantifying information which otherwise would have stayed in a qualitative form. Examples include classification of grain stuctures, measurements of grain size, pore size calculations, and more.
 
-Chowdhury et al. took a more expansive approach to performing feature identification in microstructures. In particular, they were looking to classify microstructures as either dendritic or non dendritic. Chowdhury employed 8 different feature identification methods for a dataset of images. Classification was performed using support vector machines (SVM), Na\"ive Bayes, nearest neighbor, and a committee of the three previous classification methods \cite{Chowdhury2016}. Chowdhury's wide approach to image classification compared the predictive ability of all combinations of feature identification and classification methods, achieving classification accuracies above 90\%. 
+Chowdhury et al. took a more expansive approach to performing feature identification in microstructures. In particular, they were looking to classify microstructures as either dendritic or non dendritic. Chowdhury employed 8 different feature identification methods for a dataset of images. Classification was performed using an ensemble of ML techniques including support vector machines (SVM), Na\"ive Bayes, nearest neighbor, and a committee of the three previous classification methods \cite{Chowdhury2016}. Chowdhury's wide approach to image classification compared the predictive ability of all combinations of feature identification and classification methods, achieving classification accuracies above 90\%. 
+
+It would be overly burdensome to lay out every \textit{possible} application of computer vision in additive manufacturing. Efforts are underway across materials science to implement computer vision for the automation of materials classification. Rather, the authors would like to refer the reader to reviews on the subject of computer vision for materials science, as well as open libraries. The hope is that readers will discover the many possible uses of computer vision and begin applying methods to their own AM problems. 
+
